--- a/Index.html
+++ b/Index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
 <div class="container">
+
+    <button type="button" class="hexBtn">Press here to generate a color</button>
+
     <h2 class="hexColor">
-        this hex color code is: <span class="hex"></span>
+        this hex color code is: <br><span class="hex"></span>
     </h2>
     
+    <div class="square"></div>
     
-    <button type="button" class="hexBtn">press here to change color</button>
 
 </div>
     <script src="script.js"></script>
